--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm install -g pnpm && pnpm install --frozen-lockfile
+        - npm install -g pnpm && pnpm install --no-frozen-lockfile
     build:
       commands:
         - pnpm run build
