--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@react-spring/web": "^9.7.5",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -23,6 +25,8 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-responsive-masonry": "^2.7.1",
+    "react-type-animation": "^3.2.0",
+    "rss-parser": "^3.13.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
