--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^12.1.0",
     "lucide-react": "^0.474.0",
+    "moment": "^2.30.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dayjs": "^0.3.2",
