--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-spring/web": "^9.7.5",
@@ -23,6 +25,7 @@
     "react": "^19.0.0",
     "react-dayjs": "^0.3.2",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-responsive-masonry": "^2.7.1",
